--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
               </ul>
             </div>
         </nav>
+        <div id="encabezado" class="container">
+            <img id="foto-carnet" class="img-fluid rounded-circle mx-auto d-block" src="https://media.gettyimages.com/photos/portrait-of-real-caucasian-man-with-happy-expression-looking-at-picture-id1146465010?s=612x612" alt="foto carnet">
+            <h1>Juan Pablo Lavigna</h1>
+            <p>Estudiando programacion desde hace 4 meses</p>
+        </div>
     
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
