--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <!-- Brand -->
-            <a class="navbar-brand" href="#">Navbar</a>
+            <h2 class="navbar-brand">Juan P. Lavigna</h2>
           
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
