--- a/index.html
+++ b/index.html
@@ -38,6 +38,22 @@
             <h1>Juan Pablo Lavigna</h1>
             <p>Estudiando programacion desde hace 4 meses</p>
         </div>
+        <div id="portfolio">
+          <h2>Portfolio</h2>
+          <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                  <img src="img/ensalada.jpg" alt="">   
+                </div>
+                <div class="col-md-4">
+                  <img src="img/ensalada.jpg" alt=""> 
+                </div>
+                <div class="col-md-4">
+                  <img src="img/ensalada.jpg" alt=""> 
+                </div>
+            </div>
+          </div>
+        </div>
         
     
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
