Cambia medium por small en las columnas de portfolio

--- a/index.html
+++ b/index.html
@@ -42,17 +42,20 @@
           <h2>Portfolio</h2>
           <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-sm-4">
                   <img src="img/ensalada.jpg" alt="">   
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                   <img src="img/ensalada.jpg" alt=""> 
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4">
                   <img src="img/ensalada.jpg" alt=""> 
                 </div>
             </div>
           </div>
+        </div>
+        <div>
+
         </div>
         
     
