--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
     <title>Portfolio</title>
 </head>
 <body>
-      <div class="container">
+      <div class="container-fluid p-0">
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <!-- Brand -->
             <h2 class="navbar-brand">Juan P. Lavigna</h2>
-          
-            <!-- Toggler/collapsibe Button -->
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
           
-            <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
               <ul class="navbar-nav">
                 <li class="nav-item">
