--- a/index.html
+++ b/index.html
@@ -39,19 +39,13 @@
         <div id="portfolio">
           <h2>Portfolio</h2>
             <div class="row">
-                <div class="col-sm-4">
-                  <img src="img/ensalada.jpg" alt="">   
-                </div>
-                <div class="col-sm-4">
-                  <img src="img/ensalada.jpg" alt=""> 
-                </div>
-                <div class="col-sm-4">
-                  <img src="img/ensalada.jpg" alt=""> 
-                </div>
+                  <img width="300px" height="300px" src="img/ensalada.jpg" alt=""> 
+                  <img width="300px" height="300px" src="img/ensalada.jpg" alt="">
+                  <img width="300px" height="300px" src="img/ensalada.jpg" alt="">
             </div>
           
         </div>
-        <div class="container">
+        <div>
 
         </div>
       </div>  
