--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <div id="portfolio">
           <h2>Portfolio</h2>
             <div class="row">
-                  <img width="300px" height="300px" src="img/ensalada.jpg" alt=""> 
-                  <img width="300px" height="300px" src="img/ensalada.jpg" alt="">
-                  <img width="300px" height="300px" src="img/ensalada.jpg" alt="">
+                  <img width="300px" height="300px" src="https://images.pexels.com/photos/2074746/pexels-photo-2074746.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt=""> 
+                  <img width="300px" height="300px" src="https://images.pexels.com/photos/2074746/pexels-photo-2074746.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                  <img width="300px" height="300px" src="https://images.pexels.com/photos/2074746/pexels-photo-2074746.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
             </div>
           
         </div>
