Crea seccion acerca de mi

--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
             </div>
           
         </div>
-        <div>
-
+        <div id="about-me" class="row">
+          <div>
+            <h2>Acerca de mi</h2>
+            <hr>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint vero eligendi earum neque ab, ducimus, itaque vitae minima nam velit reprehenderit facilis illum omnis et magnam cum eos voluptatum natus?</p>
+          </div>
         </div>
       </div>  
     
