--- a/index.html
+++ b/index.html
@@ -49,10 +49,19 @@
           <div>
             <h2>Acerca de mi</h2>
             <hr>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint vero eligendi earum neque ab, ducimus, itaque vitae minima nam velit reprehenderit facilis illum omnis et magnam cum eos voluptatum natus?</p>
+            <p  class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint vero eligendi earum neque ab, ducimus, itaque vitae minima nam velit reprehenderit facilis illum omnis et magnam cum eos voluptatum natus?</p>
           </div>
         </div>
-      </div>  
+        <div id="contacto">         
+          <div class="formu">
+            <h2>Contactame!</h2>
+            <form action=""></form>
+              <label>Nombre <br><input type="text" name="nombre" id=""></label> <br>
+              <label>E-mail <br><input type="email" name="e-mail" id=""></label> <br>
+              <label>Mensaje <br><textarea name="" id="" cols="30" rows="10"></textarea></label>
+
+          </div>
+        </div>
     
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
